Closed Bug 1601738 Opened 6 years ago Closed 6 years ago

ThreadSanitizer: data race [@ JSFunction::trace] vs. [@ nonLazyScript]

Categories

(Core :: JavaScript Engine, defect, P1)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox73 --- fixed

People

(Reporter: decoder, Assigned: jonco)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

The attached crash information was detected while running CI tests with ThreadSanitizer on mozilla-central revision 6989fcd6bab3.

This is a fairly common race in tests and I'm not sure what the impact here is. However, racing between GC and cloning the script sounds like it should at least be investigated further.

General information about TSan reports

Why fix races?

Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.

Rating

If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.

False Positives / Benign Races

Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].

[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf

Suppressing unfixable races

If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.

Steve, do you think you could give this a quick investigation. If you the wrong person could you help point to someone that would be good to look at this?

Flags: needinfo?(sphink)

Well, it's a real data race. Probably benign.

GC happens main-thread. It's tracing selfhosted functions, which are also in use on other threads (I think this is expected; see JSRuntime::initSelfHosting).

JSFunction::trace writes back to u.scripted.s.script_, so TSan complains.

According to jonco we don't compact the selfhosting compartment, so this should not be a problem.

Flags: needinfo?(sphink) → needinfo?(jcoppeard)
Assignee: nobody → jcoppeard
Flags: needinfo?(jcoppeard)
Priority: -- → P1

We don't relocate anything in the self hosted compartment when compacting so we shouldn't actually be writing a differnt value here. Let's try making the write conditional.

Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6961e0fe5baf Don't update unchanged script fields when tracing to stop TSAN complaining r=sfink

If this causes you problems (performance-wise) we have #ifdef MOZ_TSAN at our disposal. Thanks for working on this!

Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: