Bug 1601738 - Don't update unchanged script fields when tracing to stop TSAN complaining r=sfink

We don't relocate anything in the self hosted compartment when compacting so we shouldn't actually be writing a differnt value here. Let's try making the write conditional.

Differential Revision: https://phabricator.services.mozilla.com/D56967